--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,35 +75,42 @@
                         app:layout_constraintTop_toBottomOf="@id/onlineStatusDescLL"
                         android:layout_marginTop="50dp">
                         <LinearLayout
-                            android:orientation="horizontal"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:orientation="vertical"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:background="@drawable/allside_border">
                             <TextView
-                                android:layout_width="0dp"
-                                android:layout_weight="0.8"
+                                android:id="@+id/ordersUnderManagementCountTV"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textSize="18dp"
-                                android:text="Orders still in queue"/>
-                            <TextView
-                                android:id="@+id/ordersInQueueTV"
-                                android:layout_width="0dp"
-                                android:layout_weight="0.2"
-                                android:layout_height="wrap_content"
-                                android:gravity="center"
-                                android:textSize="18dp"
+                                android:layout_gravity="center"
+                                android:textSize="35dp"
                                 android:text="0"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:padding="5dp"
+                                android:textSize="18dp"
+                                android:text="orders under management"/>
                         </LinearLayout>
+                        <Button
+                            android:id="@+id/proceedToManageOrdersB"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="Proceed to manage orders"/>
                         <LinearLayout
                             android:orientation="horizontal"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp">
+                            android:layout_marginTop="25dp">
                             <TextView
                                 android:layout_width="0dp"
                                 android:layout_weight="0.8"
                                 android:layout_height="wrap_content"
                                 android:textSize="18dp"
-                                android:text="Orders attempts during last offline"/>
+                                android:text="Order attempts"/>
                             <TextView
                                 android:id="@+id/orderAttemptsTV"
                                 android:layout_width="0dp"
@@ -116,7 +123,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/basicStatsLL"
+                        android:id="@+id/statsDescLL"
                         android:orientation="vertical"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -132,42 +139,62 @@
                             android:orientation="horizontal"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
-                            <TextView
+                            <LinearLayout
+                                android:orientation="vertical"
                                 android:layout_width="0dp"
-                                android:layout_weight="0.8"
+                                android:layout_weight="0.5"
                                 android:layout_height="wrap_content"
-                                android:textSize="18dp"
-                                android:text="Revenue"/>
-                            <TextView
-                                android:id="@+id/revenueFigureTV"
+                                android:background="@drawable/allside_border">
+                                <TextView
+                                    android:id="@+id/revenueFigureTV"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:textSize="25dp"
+                                    android:text="Rs 0"/>
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:textSize="18dp"
+                                    android:text="revenue generated"/>
+                            </LinearLayout>
+                            <LinearLayout
+                                android:orientation="vertical"
                                 android:layout_width="0dp"
-                                android:layout_weight="0.2"
+                                android:layout_weight="0.5"
                                 android:layout_height="wrap_content"
-                                android:gravity="center"
-                                android:textSize="18dp"
-                                android:text="Rs 0"/>
+                                android:background="@drawable/allside_border">
+                                <TextView
+                                    android:id="@+id/orderCountTV"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:textSize="25dp"
+                                    android:text="0"/>
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:textSize="18dp"
+                                    android:text="orders fulfilled"/>
+                            </LinearLayout>
                         </LinearLayout>
-                        <LinearLayout
-                            android:orientation="horizontal"
-                            android:layout_width="match_parent"
+                        <Button
+                            android:id="@+id/detailedStatsB"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp">
-                            <TextView
-                                android:layout_width="0dp"
-                                android:layout_weight="0.8"
-                                android:layout_height="wrap_content"
-                                android:textSize="18dp"
-                                android:text="Orders"/>
-                            <TextView
-                                android:id="@+id/orderCountTV"
-                                android:layout_width="0dp"
-                                android:layout_weight="0.2"
-                                android:layout_height="wrap_content"
-                                android:gravity="center"
-                                android:textSize="18dp"
-                                android:text="0"/>
-                        </LinearLayout>
+                            android:layout_gravity="center"
+                            android:text="View detailed stats"/>
                     </LinearLayout>
+
+                    <Button
+                        android:id="@+id/orderHistoryB"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toBottomOf="@+id/statsDescLL"
+                        android:layout_marginTop="35dp"
+                        android:text="View order history"/>
 
                 </android.support.constraint.ConstraintLayout>
 
@@ -175,7 +202,7 @@
         </LinearLayout>
 
     </android.support.design.widget.CoordinatorLayout>
-    
+
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
