Implemented AsyncTasks for fetching: - orders under management - revenue generated - orders fulfilled

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -146,7 +146,7 @@
                                 android:layout_height="wrap_content"
                                 android:background="@drawable/allside_border">
                                 <TextView
-                                    android:id="@+id/revenueFigureTV"
+                                    android:id="@+id/revenueGeneratedTV"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:gravity="center"
@@ -166,7 +166,7 @@
                                 android:layout_height="wrap_content"
                                 android:background="@drawable/allside_border">
                                 <TextView
-                                    android:id="@+id/orderCountTV"
+                                    android:id="@+id/ordersFulfilledCountTV"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:gravity="center"
