--- a/app/src/main/res/layout/activity_order_management.xml
+++ b/app/src/main/res/layout/activity_order_management.xml
@@ -23,6 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tab_layout"
+                app:tabMode="scrollable"
                 android:background="#fff"
                 app:tabSelectedTextColor="@color/colorPrimary"
                 app:tabIndicatorColor="#fff"
